# time-tracker

./: .gitignore  Cargo.toml  README.md  diesel.toml  flake.nix
migrations/2025-12-05-234832-0000_init/: down.sql  up.sql
res/: template.typ
src/: lib.rs  main.rs
src/cli/: amend.rs  args.rs  generate.rs  list.rs  log.rs  mod.rs  patterns.rs
src/csv/: convert.rs
src/orm/: insert.rs  mod.rs  model.rs  query.rs  schema.rs  ticket.rs
src/typst/: convert.rs  error.rs  mod.rs  world.rs
src/util/: date.rs  error.rs  mod.rs
