[package]
name = "time-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
clap-cargo = "0.18.3"
comemo = "0.4"
csv = "1.4.0"
ctreg = "1.0.3"
derive_more = { version = "2.0.0", features = ["debug", "display"] }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono"
] }
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4"
time = "0.3"
ttf-parser = "0.25"
typst = "0.14.1"
typst-kit = { version = "0.14.1", features = ["embed-fonts"] }
typst-pdf = "0.14.1"
ureq = "2.9"
zune-inflate = { version = "0.2", default-features = false, features = ["gzip", "std"] }
